--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+dj-database-url==0.5.0
 Django==3.2.23
 django-allauth==0.60.1
 django-countries==7.2.1
@@ -6,6 +7,7 @@ django-crispy-forms==1.14.0
 gunicorn==21.2.0
 oauthlib==3.2.2
 pillow==10.2.0
+psycopg2==2.9.9
 PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2023.3.post1
